--- a/src/styles/question.scss
+++ b/src/styles/question.scss
@@ -5,6 +5,19 @@
     padding: 24px;
 
     
+    &.highlighted {
+        background: #f4f0ff;
+        border: 1px solid #835afd;
+        
+        footer .user-info span {
+            color: #29292e;
+        }
+    }
+    
+    &.answered {
+        background: #dbdcdd;
+    }
+   
     &:hover {
         box-shadow: 0 2px 12px rgba(0, 0, 0, 0.5);
     }
@@ -40,6 +53,11 @@
                 color: #737380;
                 font-size: 14px;
             }
+        }
+
+        > div {
+            display: flex;
+            gap: 16px;
         }
 
         button {
